--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+localhost-key.pem
+localhost.pem
 /node_modules
 /.pnp
 .pnp.js
