--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@headlessui/react": "^2.2.3",
     "@mui/material": "^6.4.11",
     "@mui/x-date-pickers": "^7.28.3",
     "@mui/x-date-pickers-pro": "^7.28.3",
@@ -19,6 +20,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.25",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
     "react-webcam": "^7.2.0",
