update api di halaman AmbilGambar, UbahPassword, Pegawai, PerhitunganGaji, Presensi, Rekapan, LoginForm

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 HTTPS=true
 SSL_CRT_FILE=localhost.pem
 SSL_KEY_FILE=localhost-key.pem
-REACT_APP_API_URL=https://api.berkahangsana.online
+REACT_APP_API_URL=https://api.berkahangsana.com
 # REACT_APP_API_URL=http://127.0.0.1:5000
