fix handle token, fix alert logout 2x

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.13",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.25",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
