--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fe-webberkah",
-  "version": "0.1.0",
+  "version": "2.1.3",
   "private": true,
   "homepage": "",
   "dependencies": {
@@ -29,8 +29,9 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "prebuild": "node scripts/generate-version.js",
     "build": "react-scripts build",
+    "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
