--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "react-swipeable-views": "^0.14.0",
     "react-toastify": "^11.0.5",
     "react-webcam": "^7.2.0",
     "web-vitals": "^2.1.4",
